[gd_scene load_steps=3 format=2]

[ext_resource path="res://Levels/Grasslands0/KeysHint/KeyHintArea.gd" type="Script" id=1]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 400, 200 )

[node name="Scene0_0" type="Area2D"]
position = Vector2( 44, 16 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 56 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Scene0_0_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Scene0_0_body_exited"]
